#4874 closed bug (fixed)
Cant cut and drag on to desktop a piece of picture
Reported by: | streak | Owned by: | julun |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ShowImage | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #726 | |
Platform: | x86 |
Description (last modified by )
On newest haiku builds [ nightlies ] i couldnt cut and drag on to desktop/folder a piece of picture selected in ShowImage.
Im getting error: " Sorry, the file 'Bitmap Clip 1' could not be written "
Attachments (1)
Change History (16)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Component: | Applications/ShowImage → Add-Ons/Translators/PNG |
---|---|
Owner: | changed from | to
comment:3 by , 13 years ago
I have confirmed it but have not yet starting working on it. Any reason you removed me as the owner and changed the component to the PNG Translator?
comment:4 by , 13 years ago
Component: | Add-Ons/Translators/PNG → Applications/ShowImage |
---|---|
Owner: | changed from | to
Changing the component automatically changes the owner to the owner of the component.
comment:6 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:7 by , 12 years ago
Fixed in hrev35139.
I've attached a patch that does introduce a new method to ask the translator if it really can handle the image output size, so it won't show up in the generated list for translators if unable to do so. Still I'm unsure if we can't find a different way.
by , 12 years ago
Attachment: | translator.diff added |
---|
comment:8 by , 12 years ago
In general I'd say I like this solution; however, it would make a much better impression to the user if each translator could support all sizes. Ie. in the case of the ICO translator, it could resize the image to something it can handle.
comment:9 by , 12 years ago
Maybe ShowImage should in this particular case try to take over the source format? And if that fails (ie. if that cannot write), try well known ones first, like "PNG", "JPG"?
While the problem shows that ShowImage needs improvements in this area, it also shows that the heuristical ordering of the translators doesn't really make much sense at all.
comment:10 by , 12 years ago
Hi, thanks for having a look at the patch. I'm going to apply it next. For the second comment you added, this is how I implemented it in ShowImage now (hrev35139). It will add the current image format in the current translator list first, though if it can't write out it would fall back to the heuristic ordering of the translators. I'm going to open an enhancement ticket for this.
follow-up: 13 comment:12 by , 12 years ago
What do you think about changing ICO to accept all sizes in the future again, and let it resize the image automatically? Should I open an enhancement ticket for this again? I'm a bit torn on the issue.
comment:13 by , 12 years ago
Hi,
Replying to axeld:
What do you think about changing ICO to accept all sizes in the future again, and let it resize the image automatically? Should I open an enhancement ticket for this again? I'm a bit torn on the issue.
Yes I think it's worth to extend the translater, so an enhancement ticket should be filed.
comment:14 by , 9 years ago
Description: | modified (diff) |
---|
comment:15 by , 8 years ago
Blocking: | 726 added |
---|
How's it going? Any progress in correcting this BUG?