* Fix can't cut and drag a piece of picture from ShowImage to Desktop, ticket #4874. * Set the current image mime as first in the translators list, thus on drag&drop with   left mouse button the same image type is created as the currently loaded in ShowImage.

Still this does more hide than fix the real problem, beeing ICO translator the first in
  the generated translator list due to the high capabilitys values and a limited set of
  output sizes it can handle. I attached a further fix to the ticket, still i would like
  to get some other opinions on it before commiting.


By default the transla


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35139 a95241bf-73f2-0310-859d-f6bbb57e9c96